// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots FormRow Default 1`] = `
<form>
  <div
    className="sc-kgoBCf kcavcy"
  >
    <div
      className="sc-bwzfXH fuDYDT"
    >
      <label>
        <p
          className="sc-bxivhb kFVWeI"
        >
          What is your name?
        </p>
        <p
          className="sc-bxivhb kTaguW"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti non quasi similique sint quae exercitationem molestiae aspernatur cum. Necessitatibus, corrupti veritatis. Placeat, tempora! Vitae rem, nobis rerum natus odit debitis.
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH ftkQQi"
    >
      <div
        className="sc-bwzfXH hbWtcJ"
      >
        <div
          className="sc-bwzfXH eKPcjO"
        >
          <div
            className="sc-bwzfXH hzWLac"
          >
            <div
              className="sc-hMqMXs lcVHiK"
              disabled={undefined}
            >
              <div
                className="sc-jKJlTe kuDUsE"
                disabled={undefined}
                onClick={[Function]}
              >
                <span
                  className="sc-eNQAEJ hiLfdP"
                >
                  Initials
                </span>
              </div>
              <div
                className="sc-bwzfXH bZlivr"
              >
                <input
                  className="sc-ckVGcZ gBhdDx"
                  disabled={undefined}
                  id={undefined}
                  name="Initials"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text"
                  value=""
                />
                <div
                  className="sc-bwzfXH eiolfU"
                />
              </div>
            </div>
          </div>
          <div
            className="sc-bwzfXH lkkEYg"
          >
            <div
              className="sc-hMqMXs lcVHiK"
              disabled={undefined}
            >
              <div
                className="sc-jKJlTe kuDUsE"
                disabled={undefined}
                onClick={[Function]}
              >
                <span
                  className="sc-eNQAEJ hiLfdP"
                >
                  First name
                </span>
              </div>
              <div
                className="sc-bwzfXH bZlivr"
              >
                <input
                  className="sc-ckVGcZ gBhdDx"
                  disabled={undefined}
                  id={undefined}
                  name="First name"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text"
                  value=""
                />
                <div
                  className="sc-bwzfXH eiolfU"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="sc-bwzfXH bYSCch"
        >
          <div
            className="sc-hMqMXs lcVHiK"
            disabled={undefined}
          >
            <div
              className="sc-jKJlTe kuDUsE"
              disabled={undefined}
              onClick={[Function]}
            >
              <span
                className="sc-eNQAEJ hiLfdP"
              >
                Surname
              </span>
            </div>
            <div
              className="sc-bwzfXH bZlivr"
            >
              <input
                className="sc-ckVGcZ gBhdDx"
                disabled={undefined}
                id={undefined}
                name="Surname"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value=""
              />
              <div
                className="sc-bwzfXH eiolfU"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-kgoBCf kcavcy"
  >
    <div
      className="sc-bwzfXH fuDYDT"
    >
      <label>
        <p
          className="sc-bxivhb kFVWeI"
        >
          Where do you live?
        </p>
        <p
          className="sc-bxivhb kTaguW"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti non quasi similique sint quae exercitationem molestiae aspernatur cum. Necessitatibus, corrupti veritatis. Placeat, tempora! Vitae rem, nobis rerum natus odit debitis.
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH ftkQQi"
    >
      <div
        className="sc-bwzfXH hbWtcJ"
      >
        <div
          className="sc-bwzfXH bYSCch"
        >
          <div
            className="sc-hMqMXs lcVHiK"
            disabled={undefined}
          >
            <div
              className="sc-jKJlTe kuDUsE"
              disabled={undefined}
              onClick={[Function]}
            >
              <span
                className="sc-eNQAEJ hiLfdP"
              >
                Country
              </span>
            </div>
            <div
              className="sc-bwzfXH bZlivr"
            >
              <input
                className="sc-ckVGcZ gBhdDx"
                disabled={undefined}
                id={undefined}
                name="Country"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value=""
              />
              <div
                className="sc-bwzfXH eiolfU"
              />
            </div>
          </div>
        </div>
        <div
          className="sc-bwzfXH bYSCch"
        >
          <div
            className="sc-hMqMXs lcVHiK"
            disabled={undefined}
          >
            <div
              className="sc-jKJlTe kuDUsE"
              disabled={undefined}
              onClick={[Function]}
            >
              <span
                className="sc-eNQAEJ hiLfdP"
              >
                City
              </span>
            </div>
            <div
              className="sc-bwzfXH bZlivr"
            >
              <input
                className="sc-ckVGcZ gBhdDx"
                disabled={undefined}
                id={undefined}
                name="City"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value=""
              />
              <div
                className="sc-bwzfXH eiolfU"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-kgoBCf kcavcy"
  >
    <div
      className="sc-bwzfXH fuDYDT"
    >
      <label>
        <p
          className="sc-bxivhb kFVWeI"
        >
          Can a boolean only be either true or false?
        </p>
        <p
          className="sc-bxivhb kTaguW"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti non quasi similique sint quae exercitationem molestiae aspernatur cum. Necessitatibus, corrupti veritatis. Placeat, tempora! Vitae rem, nobis rerum natus odit debitis.
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH ftkQQi"
    >
      <div
        className="sc-bwzfXH hdcnas"
      >
        <div
          className="sc-bwzfXH PqnMZ"
        >
          <div
            className="sc-kGXeez iBFgVY"
            onClick={[Function]}
          >
            <div
              className="sc-bwzfXH MBtgg"
            >
              <div
                checked={true}
                className="sc-dxgOiQ cmdPra"
                disabled={undefined}
              >
                <input
                  checked={true}
                  className="sc-kpOJdX hZrIxJ"
                  id={undefined}
                  name="bool"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="1"
                />
              </div>
            </div>
            <p
              className="sc-bxivhb kFVWeI"
            >
              <span
                className="sc-htpNat jqVwBu"
              >
                <label
                  htmlFor="bool"
                >
                  True
                </label>
              </span>
            </p>
          </div>
        </div>
        <div
          className="sc-bwzfXH iqaekC"
        >
          <div
            className="sc-kGXeez iBFgVY"
            onClick={[Function]}
          >
            <div
              className="sc-bwzfXH MBtgg"
            >
              <div
                checked={false}
                className="sc-dxgOiQ cZHqqG"
                disabled={undefined}
              >
                <input
                  checked={false}
                  className="sc-kpOJdX hZrIxJ"
                  id={undefined}
                  name="bool"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="2"
                />
              </div>
            </div>
            <p
              className="sc-bxivhb kFVWeI"
            >
              <span
                className="sc-htpNat jqVwBu"
              >
                <label
                  htmlFor="bool"
                >
                  False
                </label>
              </span>
            </p>
          </div>
        </div>
        <div
          className="sc-bwzfXH iqaekC"
        >
          <div
            className="sc-kGXeez iBFgVY"
            onClick={[Function]}
          >
            <div
              className="sc-bwzfXH MBtgg"
            >
              <div
                checked={false}
                className="sc-dxgOiQ cZHqqG"
                disabled={undefined}
              >
                <input
                  checked={false}
                  className="sc-kpOJdX hZrIxJ"
                  id={undefined}
                  name="bool"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="3"
                />
              </div>
            </div>
            <p
              className="sc-bxivhb kFVWeI"
            >
              <span
                className="sc-htpNat jqVwBu"
              >
                <label
                  htmlFor="bool"
                >
                  Sometimes
                </label>
              </span>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Storyshots FormRow No Descriptions 1`] = `
<form>
  <div
    className="sc-kgoBCf kcavcy"
  >
    <div
      className="sc-bwzfXH fuDYDT"
    >
      <label>
        <p
          className="sc-bxivhb kFVWeI"
        >
          What is your name?
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH ftkQQi"
    >
      <div
        className="sc-bwzfXH hbWtcJ"
      >
        <div
          className="sc-bwzfXH hzSZhm"
        >
          <div
            className="sc-hMqMXs lcVHiK"
            disabled={undefined}
          >
            <div
              className="sc-jKJlTe kuDUsE"
              disabled={undefined}
              onClick={[Function]}
            >
              <span
                className="sc-eNQAEJ hiLfdP"
              >
                Name
              </span>
            </div>
            <div
              className="sc-bwzfXH bZlivr"
            >
              <input
                className="sc-ckVGcZ gBhdDx"
                disabled={undefined}
                id={undefined}
                name="Name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value=""
              />
              <div
                className="sc-bwzfXH eiolfU"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-kgoBCf kcavcy"
  >
    <div
      className="sc-bwzfXH fuDYDT"
    >
      <label>
        <p
          className="sc-bxivhb kFVWeI"
        >
          Where do you live?
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH ftkQQi"
    >
      <div
        className="sc-bwzfXH hbWtcJ"
      >
        <div
          className="sc-bwzfXH hzSZhm"
        >
          <div
            className="sc-hMqMXs lcVHiK"
            disabled={undefined}
          >
            <div
              className="sc-jKJlTe kuDUsE"
              disabled={undefined}
              onClick={[Function]}
            >
              <span
                className="sc-eNQAEJ hiLfdP"
              >
                Country
              </span>
            </div>
            <div
              className="sc-bwzfXH bZlivr"
            >
              <input
                className="sc-ckVGcZ gBhdDx"
                disabled={undefined}
                id={undefined}
                name="Country"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value=""
              />
              <div
                className="sc-bwzfXH eiolfU"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-kgoBCf kcavcy"
  >
    <div
      className="sc-bwzfXH fuDYDT"
    >
      <label>
        <p
          className="sc-bxivhb kFVWeI"
        >
          Can a boolean only be true or false?
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH ftkQQi"
    >
      <div
        className="sc-bwzfXH hdcnas"
      >
        <div
          className="sc-bwzfXH PqnMZ"
        >
          <div
            className="sc-kGXeez iBFgVY"
            onClick={[Function]}
          >
            <div
              className="sc-bwzfXH MBtgg"
            >
              <div
                checked={true}
                className="sc-dxgOiQ cmdPra"
                disabled={undefined}
              >
                <input
                  checked={true}
                  className="sc-kpOJdX hZrIxJ"
                  id={undefined}
                  name="bool"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="1"
                />
              </div>
            </div>
            <p
              className="sc-bxivhb kFVWeI"
            >
              <span
                className="sc-htpNat jqVwBu"
              >
                <label
                  htmlFor="bool"
                >
                  True
                </label>
              </span>
            </p>
          </div>
        </div>
        <div
          className="sc-bwzfXH iqaekC"
        >
          <div
            className="sc-kGXeez iBFgVY"
            onClick={[Function]}
          >
            <div
              className="sc-bwzfXH MBtgg"
            >
              <div
                checked={false}
                className="sc-dxgOiQ cZHqqG"
                disabled={undefined}
              >
                <input
                  checked={false}
                  className="sc-kpOJdX hZrIxJ"
                  id={undefined}
                  name="bool"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="2"
                />
              </div>
            </div>
            <p
              className="sc-bxivhb kFVWeI"
            >
              <span
                className="sc-htpNat jqVwBu"
              >
                <label
                  htmlFor="bool"
                >
                  False
                </label>
              </span>
            </p>
          </div>
        </div>
        <div
          className="sc-bwzfXH iqaekC"
        >
          <div
            className="sc-kGXeez iBFgVY"
            onClick={[Function]}
          >
            <div
              className="sc-bwzfXH MBtgg"
            >
              <div
                checked={false}
                className="sc-dxgOiQ cZHqqG"
                disabled={undefined}
              >
                <input
                  checked={false}
                  className="sc-kpOJdX hZrIxJ"
                  id={undefined}
                  name="bool"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="3"
                />
              </div>
            </div>
            <p
              className="sc-bxivhb kFVWeI"
            >
              <span
                className="sc-htpNat jqVwBu"
              >
                <label
                  htmlFor="bool"
                >
                  Sometimes
                </label>
              </span>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-kgoBCf kcavcy"
  >
    <div
      className="sc-bwzfXH fuDYDT"
    >
      <label>
        <p
          className="sc-bxivhb kFVWeI"
        >
          Do you like toggles?
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH ftkQQi"
    >
      <div
        className="sc-iAyFgw DLXvm"
        onClick={[Function]}
      >
        <div
          className="sc-bwzfXH eKPcjO"
        >
          <div
            className="sc-bwzfXH jgMMpy"
          >
            <div
              checked={false}
              className="sc-kkGfuU kGlPwr"
              disabled={undefined}
            >
              <input
                checked={false}
                className="sc-kEYyzF dpVfOt"
                disabled={false}
                id="toggle"
                name="toggle"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="checkbox"
                value="toggle"
              />
            </div>
          </div>
          <div
            className="sc-bwzfXH jxKSjn"
          >
            <p
              className="sc-bxivhb kFVWeI"
            >
               
              Toggle to indicate your preference!
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-kgoBCf kcavcy"
  >
    <div
      className="sc-bwzfXH fuDYDT"
    >
      <label>
        <p
          className="sc-bxivhb kFVWeI"
        >
          Do you like checkboxes
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH ftkQQi"
    >
      <div
        className="checkbox sc-jTzLTM jQiTLj"
        disabled={undefined}
        onClick={[Function]}
      >
        <div
          className="sc-bwzfXH kFiCyG"
        />
        <input
          checked={false}
          className="sc-VigVT jXADSx"
          id={undefined}
          name="foo"
          onBlur={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="checkbox"
          value="bar"
        />
      </div>
    </div>
  </div>
</form>
`;
